# procurement-case-study

./: .gitignore  README.md  docker-compose.yml
docs/: DESIGN.md  figma.md
docs/solution/: API.md  DIAGRAM.md  IMPROVEMENTS.md  README.md  ROADMAP.md
invoice-app/back/: Dockerfile  README.md  pom.xml
invoice-app/back/src/main/java/com/casestudy/invoiceapp/: InvoiceApplication.java
invoice-app/back/src/main/java/com/casestudy/invoiceapp/auth/: AuthController.java  AuthDtos.java  CurrentUserFilter.java  InvoiceSession.java  SessionRepository.java
invoice-app/back/src/main/resources/: application.yml
invoice-app/back/src/test/java/com/casestudy/invoiceapp/: InvoiceApplicationTests.java
invoice-app/front/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
invoice-app/front/src/: App.jsx  api.js  auth.jsx
invoice-app/front/src/components/: EditInvoiceModal.jsx  InvoiceList.jsx  LoginPage.jsx  StatusBadge.jsx  SummaryCards.jsx  UploadInvoiceModal.jsx
pr-app/back/: .dockerignore  Dockerfile  README.md  pyproject.toml
pr-app/back/app/: db.py  main.py  models.py  pdf.py  schemas.py  security.py
pr-app/back/app/routers/: auth.py  purchase_requests.py  users.py
pr-app/back/app/scripts/: init_db.py  seed_users.py
pr-app/front/: Dockerfile  README.md  index.html  package-lock.json  package.json
pr-app/front/src/: App.jsx  api.js  auth.jsx  main.jsx
pr-app/front/src/components/: CreatePRModal.jsx  LoginPage.jsx  PRList.jsx  StatusBadge.jsx  ViewPRModal.jsx
(+9 files in other folders)
