[project]
name = "pr-app-back"
version = "0.1.0"
description = "Purchase Request backend (FastAPI + SQLAlchemy on Postgres)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.29",
    "psycopg[binary]>=3.1.18",
    "pydantic[email]>=2.6.4",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",  # passlib 1.7.4 is incompatible with bcrypt>=4.1 (see Issue#190)
    "python-multipart>=0.0.9",
    "reportlab>=4.1.0",
]

[project.scripts]
# Console entry points — useful both locally and as one-shot containers.
pr-init-db = "app.scripts.init_db:main"
pr-seed-users = "app.scripts.seed_users:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
